# VECTOR

./: CMakeLists.txt  README.md
docs/: openai-codex-component-assimilation-map.md  openai-codex-upstream-manifest.json  vector-character-consumer-boundary.md  vector-main-child-program-first-slice.md  vector-runtime-topology-first-slice.md
include/vector/: child_program_runtime.h
src/: child_program_runtime.c
tests/: test_child_program_runtime.c
tests/fixtures/: cortex_host_demo.state  cortex_host_ingest.state
tools/: run-installed-cortex-vector-smoke.ps1  vector_host.c  write-codex-upstream-manifest.ps1
